[package]
name = "psmerge"
version = "0.1.0"
authors = ["Allan Saddi <allan@saddi.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0"
rusoto_ssm = "0"
rusoto_secretsmanager = "0"
handlebars = "3"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.8"
